--- a/src/_app-variables.scss
+++ b/src/_app-variables.scss
@@ -13,7 +13,7 @@ $blue-50: rgba($blue-dark, 0.5) !default;
 $blue-20: rgba($blue-dark, 0.2) !default;
 $blue-10: rgba($blue-dark, 0.1) !default;
 
-$accent-dark: #3A53FF !default;
+$accent-dark: #3E6FD5 !default;
 $accent-light: #4781FE !default;
 
 $success-dark: #06CE6A !default;
@@ -41,7 +41,7 @@ $page-content-placeholder-font-size: 20;
 **/
 
 // Colors
-$background: #fff;
+$background: #fbfaff;
 $primary: lighten(#000, 13%);
 $secondary: lighten(#000, 46%);
 $disabled: lighten(#000, 62%);
