--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
                 <GridLayout columns="*" rows="auto, auto, auto">
                     <StackLayout col="0" margin="20" row="0">
                         <Image borderRadius="100"
-                               height="100" src="https://brandmark.io/logo-rank/random/mcdonalds.png"
+                               height="100" src="~/assets/org.jpg"
                                stretch="aspectFill" width="100">
                         </Image>
                     </StackLayout>
