--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,32 +1,40 @@
 <ActionBar class="action-bar">
-    <!--
-    Use the NavigationButton as a side-drawer button in Android
-    because ActionItems are shown on the right side of the ActionBar
-    -->
-    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
-    <!--
-    Use the ActionItem for IOS with position set to left. Using the
-    NavigationButton as a side-drawer button in iOS is not possible,
-    because its function is to always navigate back in the application.
-    -->
-    <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-        ios.position="left">
+    <NavigationButton (tap)="onDrawerButtonTap()" icon="res://menu" ios:visibility="collapsed"></NavigationButton>
+    <ActionItem (tap)="onDrawerButtonTap()" android:visibility="collapsed" icon="res://navigation/menu"
+                ios.position="left">
     </ActionItem>
     <Label class="action-bar-title" text="Home"></Label>
 </ActionBar>
 
-<GridLayout rows="*, auto" columns="*" class="page">
-    <StackLayout row="0" col="0">
-        <Button class="h3 m-15 p-10 ex1" [text]="'shadow=\''+elevation+'\''" [shadow]="elevation" (tap)="toggleClass()"></Button>
-        <Label [class]="'h3 m-15 p-10 ' + bclass" [text]="'shadow elevation=\''+elevation+'\''" shadow [elevation]="elevation" [pressedElevation]="elevation + 5" [forcePressAnimation]="true" (tap)="dummy()"></Label>
-        <Label [class]="'h3 m-15 p-10 ' + bclass2" [text]="'shadow [elevation]=\''+elevation+'\' bgcolor=\'#006968\' [shape]=\'shape.RECTANGLE\' corderRadius=15'" shadow [elevation]="elevation" bgcolor="#006968" [shape]="shape.RECTANGLE" cornerRadius="15"></Label>
-        <Label [class]="'h1 m-15 p-15 ' + bclass3" text="☺" [shadow]="androidData" [forcePressAnimation]="true" (tap)="dummy()"></Label>
-        <Label class="h3 m-15 lbl5" [text]="'{ elevation: '+elevation+', bgcolor: \'#ff1744\', shape: shape.OVAL }'"></Label>
+
+<GridLayout rows="auto, auto">
+    <StackLayout backgroundColor="#3E6FD5" row="0">
+        <Image
+                margin="40"
+                src="~/assets/scan-page.png"
+                stretch="aspectFill">
+        </Image>
     </StackLayout>
-    <ListPicker row="1" col="0" [items]="stdElevations" selectedIndex="2" (selectedIndexChange)="setElevation($event)" class="p-15"></ListPicker>
+
+    <StackLayout backgroundColor="white"
+                 borderTopLeftRadius="50"
+                 borderTopRightRadius="50"
+                 height="100%"
+                 horizontalAlignment="center"
+                 marginTop="30%"
+                 row="0"
+                 textWrap="true"
+                 width="100%">
+        <GridLayout columns="*, *" margin="30" rows="auto, auto, auto, auto">
+            <TextField backgroundColor="blue" borderRadius="40" col="0" colSpan="2" height="50" hint="Enter text..."
+                       row="0"
+                       text="{{ textFieldValue }}"></TextField>
+            <Label backgroundColor="green" col="0" colSpan="2" height="90" row="1" text="110, 10"></Label>
+            <Label backgroundColor="blue" col="0" colSpan="2" height="90" row="2" text="110, 110"></Label>
+            <Label backgroundColor="yellow" col="0" height="90" row="3" text="10, 110"></Label>
+            <Label backgroundColor="#9acd32" col="1" height="90" row="3" text="10, 110"></Label>
+        </GridLayout>
+    </StackLayout>
 </GridLayout>
 
-<StackLayout>
-    <Image src="https://brandmark.io/logo-rank/random/mcdonalds.png"
-           stretch="aspectFill" height="150" width="150" borderRadius="100"></Image>
-</StackLayout>
+
