--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -10,7 +10,7 @@
              bgcolor="white"
              cornerRadius="10"
              forcePressAnimation="true"
-             height="50%"
+             height="80%"
              margin="20"
              shadow
              verticalAlignment="top">
@@ -28,7 +28,7 @@
         </Image>
         <Label class="my-label" col="2" horizontalAlignment="center" margin="20"
                row="2"
-               text="Pos Laju Tracking is sssa free app to help users to track Pos Laju Parcel. This is NOT an Official Pos Laju Tracking Apps by Pos Laju Malaysia. But we develop it as a community project for Malaysian. Please refer to Pos Laju Malaysia for more information. Thank you."
+               [text]="text"
                textWrap="true"></Label>
     </GridLayout>
 </StackLayout>
