--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -5,6 +5,26 @@
   font-family: "FontAwesome";
 }
 
+.far {
+  font-family: "Font Awesome 5 Free", "fa-regular-400";
+  font-weight: 400;
+}
+
+.fab {
+  font-family: "Font Awesome 5 Brands", "fa-brands-400";
+  font-weight: 400;
+}
+
+.fas {
+  font-family: "Font Awesome 5 Free", "fa-solid-900";
+  font-weight: 900;
+}
+
+TextField {
+  border-bottom-width: 1;
+  border-bottom-color: transparent;
+}
+
 // Common page class
 .page-content {
   .page-placeholder {
