--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,23 +16,68 @@
         </Image>
     </StackLayout>
 
-    <StackLayout backgroundColor="white"
+    <StackLayout backgroundColor="#fbfaff"
                  borderTopLeftRadius="50"
                  borderTopRightRadius="50"
                  height="100%"
                  horizontalAlignment="center"
                  marginTop="30%"
                  row="0"
-                 textWrap="true"
                  width="100%">
         <GridLayout columns="*, *" margin="30" rows="auto, auto, auto, auto">
-            <TextField backgroundColor="blue" borderRadius="40" col="0" colSpan="2" height="50" hint="Enter text..."
-                       row="0"
-                       text="{{ textFieldValue }}"></TextField>
-            <Label backgroundColor="green" col="0" colSpan="2" height="90" row="1" text="110, 10"></Label>
-            <Label backgroundColor="blue" col="0" colSpan="2" height="90" row="2" text="110, 110"></Label>
-            <Label backgroundColor="yellow" col="0" height="90" row="3" text="10, 110"></Label>
-            <Label backgroundColor="#9acd32" col="1" height="90" row="3" text="10, 110"></Label>
+
+            <StackLayout borderRadius="40" class=" input-custom" col="0" colSpan="2" row="0"
+                         shadow="4">
+                <TextField hint="Enter text..."
+                           marginLeft="10"
+                           marginRight="10"
+                           text="{{ trackingNumber }}"
+                ></TextField>
+            </StackLayout>
+
+            <GridLayout borderRadius="40" class=" input-custom" col="0" colSpan="2" columns="auto, *, auto" row="1"
+                        shadow="4">
+
+                <StackLayout col="0" marginLeft="20" verticalAlignment="center">
+                    <Label class="fas" fontSize="18" text="&#xf029;"
+                    ></Label>
+                </StackLayout>
+
+                <TextField col="1"
+                           hint="Tracking Number.."
+                           marginLeft="10"
+                           marginRight="10"
+                           text="{{ trackingNumber }}"
+                ></TextField>
+
+                <StackLayout (tap)="onTap($event)" col="2" marginRight="10" verticalAlignment="center">
+                    <Label class="fas p-12" fontSize="24" text="&#xf030;"
+                           verticalAlignment="center"></Label>
+                </StackLayout>
+
+
+            </GridLayout>
+
+            <StackLayout borderRadius="40" class=" input-custom" col="0" colSpan="2" row="2"
+                         shadow="4">
+                <TextField hint="Enter text..."
+                           marginLeft="10"
+                           marginRight="10"
+                           text="{{ trackingNumber }}"
+                ></TextField>
+            </StackLayout>
+
+
+            <StackLayout col="0" height="50" marginRight="3" marginTop="20" row="3">
+                <Button class="btn-rounded-lg btn-primary" text="Save"></Button>
+
+            </StackLayout>
+
+            <StackLayout col="1" height="50" marginLeft="3" marginTop="20" row="3">
+                <Button (tap)="onTap($event)" class="btn-rounded-lg btn-primary" text="Track"></Button>
+            </StackLayout>
+
+
         </GridLayout>
     </StackLayout>
 </GridLayout>
