--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,48 +24,50 @@
                  marginTop="30%"
                  row="0"
                  width="100%">
+
         <GridLayout columns="*, *" margin="30" rows="auto, auto, auto, auto">
 
-            <StackLayout borderRadius="40" class=" input-custom" col="0" colSpan="2" row="0"
-                         shadow="4">
-                <TextField hint="Enter text..."
-                           marginLeft="10"
-                           marginRight="10"
-                           text="{{ trackingNumber }}"
-                ></TextField>
+            <StackLayout borderRadius="40" class="input-custom" col="0" colSpan="2" row="0">
+                <Label [text]="trackingNumber"></Label>
             </StackLayout>
 
-            <GridLayout borderRadius="40" class=" input-custom" col="0" colSpan="2" columns="auto, *, auto" row="1"
-                        shadow="4">
+            <GridLayout borderRadius="40" class=" input-custom" col="0" colSpan="2" columns="auto, *, auto" row="1" shadow="4">
 
                 <StackLayout col="0" marginLeft="20" verticalAlignment="center">
-                    <Label class="fas" fontSize="18" text="&#xf029;"
-                    ></Label>
+                    <Label class="fas" fontSize="18" text="&#xf029;"></Label>
                 </StackLayout>
 
                 <TextField col="1"
                            hint="Tracking Number.."
                            marginLeft="10"
                            marginRight="10"
-                           text="{{ trackingNumber }}"
+                           [(ngModel)]="trackingNumber"
                 ></TextField>
 
-                <StackLayout (tap)="onTap($event)" col="2" marginRight="10" verticalAlignment="center">
-                    <Label class="fas p-12" fontSize="24" text="&#xf030;"
-                           verticalAlignment="center"></Label>
+                <StackLayout (tap)="onTapCamera($event)" col="2" marginRight="10" verticalAlignment="center">
+                    <Label class="fas p-12" fontSize="24" text="&#xf030;" verticalAlignment="center"></Label>
                 </StackLayout>
-
 
             </GridLayout>
 
-            <StackLayout borderRadius="40" class=" input-custom" col="0" colSpan="2" row="2"
-                         shadow="4">
-                <TextField hint="Enter text..."
+            <GridLayout borderRadius="40" class=" input-custom" col="0" colSpan="2" columns="auto, *, auto" row="2" shadow="4">
+
+                <StackLayout col="0" marginLeft="20" verticalAlignment="center">
+                    <Label class="fas" fontSize="18" text="&#xf466;"></Label>
+                </StackLayout>
+
+                <TextField [(ngModel)]="trackingNumber"
+                           col="1"
                            marginLeft="10"
                            marginRight="10"
-                           text="{{ trackingNumber }}"
+                           hint="Title or Category.."
                 ></TextField>
-            </StackLayout>
+
+                <StackLayout (tap)="onTapCategory($event)" col="2" marginRight="10" verticalAlignment="center">
+                    <Label class="fas p-12" fontSize="24" text="&#xf02b;" verticalAlignment="center"></Label>
+                </StackLayout>
+
+            </GridLayout>
 
 
             <StackLayout col="0" height="50" marginRight="3" marginTop="20" row="3">
