--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<RadSideDrawer transition="PushTransition">
+<RadSideDrawer transition="SlideInOnTopTransition">
     <GridLayout class="sidedrawer sidedrawer-left" rows="auto, *" tkDrawerContent>
         <side-menu></side-menu>
     </GridLayout>
