--- a/src/styles/_app-common.scss
+++ b/src/styles/_app-common.scss
@@ -27,6 +27,7 @@ TextField {
 
 // Common page class
 .page-content {
+  background-color: #fbfaff;
   .page-placeholder {
     color: $page-icon-color;
     font-size: $page-content-placeholder-font-size;
