--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -41,9 +41,10 @@ RadListView {
 }
 
 .fab-button {
-  height: 70;
-  width: 70; /// this is required on iOS - Android does not require width so you might need to adjust styles
+  width: 56;
+  height: 56;
   margin: 15;
+  font-size: 7;
   background-color: #ff4081;
   horizontal-align: right;
   vertical-align: bottom;
