--- a/src/app/pages/notification/notification.component.html
+++ b/src/app/pages/notification/notification.component.html
@@ -4,6 +4,6 @@
     <Label class="action-bar-title" text="Notification"></Label>
 </ActionBar>
 
-<GridLayout class="page page-content">
-    <Label class="page-icon fa" text="&#xf1ea;"></Label>
+<GridLayout rows="*">
+    <FAB (tap)="fabTap()" class="fab-button" icon="~/assets/plus.png" rippleColor="#f1f1f1" row="0"></FAB>
 </GridLayout>
