--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,5 +1,5 @@
 .search-stack {
-  margin: 10 10 15 10;
+  margin: 10 10 10 10;
   background-color: white;
   border-radius: 15;
   height: 40;
@@ -7,13 +7,13 @@
 
 .search {
   background-color: white;
-  margin-left: 15;
-  margin-right: 15;
+  //margin-left: 10;
+  //margin-right: 10;
 }
 
 RadListView {
-  width: 100%;
-  height: 100%;
+  //width: 100%;
+  //height: 100%;
 
   .labelTitle {
     font-size: 14;
