--- a/src/app/pages/notification/notification.component.html
+++ b/src/app/pages/notification/notification.component.html
@@ -5,5 +5,10 @@
 </ActionBar>
 
 <GridLayout rows="*">
-    <FAB (tap)="fabTap()" class="fab-button" icon="~/assets/plus.png" rippleColor="#f1f1f1" row="0"></FAB>
+    <FAB (tap)="fabTap()"
+         class="fas fab-button"
+         rippleColor="#f1f1f1"
+         row="1"
+         text="&#xf067;"
+    ></FAB>
 </GridLayout>
